--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-@import "_iconfont.css";
-
 html, body {
     margin: 0;
     padding: 0;
@@ -105,7 +103,7 @@ html, body {
     top: 0;
     bottom: 0;
     background-color: black;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     color: white;
